<resources>
    <string name="app_name">iMatch Sample App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">iMatch Sample App</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_scan_mrz">Scan MRZ</string>
    <string name="button_read_passport_native">NFC iMatch: Native iMatch (fastest)</string>
    <string name="button_read_passport_id_reader">NFC iMatch: ID Reader SDK</string>
    <string name="button_read_passport_id_reader_nfc">NFC Mobile: ID Reader SDK</string>
    <string name="button_scan_fingerprint">Scan Fingerprint (iMatch 3)</string>
    <string name="button_scan_ib_fingerprint">Scan IB Fingerprint (iMatch 45/50)</string>
    <string name="button_scan_smart_card">Scan Smart Card</string>
    <string name="checkbox_save_wsq">Save WSQ image to file</string>
    <string name="activity_title_pairing_activity">Connect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="unknown_device">Unknown device</string>
    <string name="no_imatch">No iMatch found</string>
    <string name="insert_card">Please insert card</string>
    <string name="invalid_card">Invalid Card</string>
    <string name="select_imatch">Select your iMatch</string>
    <string name="Information">Information</string>
    <string name="InvalidDocumentReaderLicense">DocumentReader license not found. MRZ / Passport functions will be disabled</string>
</resources>